[package]
name = "nano-rpc-client"
version = "0.1.0"
authors = ["gak"]
edition = "2018"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
redis = "0.19.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
